# universal-connectivity-workshop

./: .gitignore  Cargo.toml  LICENSE  README.md  defaults.yaml  lesson_plan.txt  original_prompt.txt
.ai/: state.txt
ai_generated_lessons/: deps.py  setup.md
ai_generated_lessons/01-identity-and-swarm/: check.py  lesson.md  lesson.yaml
ai_generated_lessons/01-identity-and-swarm/app/: Dockerfile
ai_generated_lessons/02-tcp-transport/: check.py  docker-compose.yaml  lesson.md  lesson.yaml
ai_generated_lessons/02-tcp-transport/app/: Dockerfile
ai_generated_lessons/03-ping-checkpoint/: check.py  docker-compose.yaml  lesson.md  lesson.yaml
ai_generated_lessons/03-ping-checkpoint/app/: Dockerfile
ai_generated_lessons/03-ping-checkpoint/checker/: Dockerfile
en/: description.md  workshop.yaml
en/checker/: Cargo.toml  Dockerfile  README.md
en/checker/src/: main.rs
en/js/: deps.py  setup.md
en/js/01-identity-and-swarm/: check.py  docker-compose.yaml  lesson.md  lesson.yaml
en/js/02-tcp-transport/: check.py  docker-compose.yaml  index.js  lesson.md  lesson.yaml
en/js/03-ping-protocol/: check.py  docker-compose.yaml  lesson.md  lesson.yaml
en/js/04-circuit-relay-v2/: check.py  docker-compose.yaml  lesson.md  lesson.yaml
en/js/05-identify-protocol/: check.py  docker-compose.yaml  lesson.md  lesson.yaml
en/js/06-gossipsub-module/: .gitignore  check.py  docker-compose.yaml  lesson.md  lesson.yaml
en/js/07-kademlia-checkpoint/: .gitignore  check.py  docker-compose.yaml  (+2 more)
en/py/: deps.py  setup.md
en/rs/: setup.md
en/rs/04-quic-transport/checker/: Cargo.toml  Dockerfile
en/rs/04-quic-transport/checker/src/: main.rs
en/rs/05-identify-checkpoint/checker/: Cargo.toml
en/rs/05-identify-checkpoint/checker/src/: main.rs
en/rs/07-kademlia-checkpoint/checker/: Cargo.toml
en/rs/07-kademlia-checkpoint/checker/src/: main.rs
en/rs/08-final-checkpoint/checker/: Cargo.toml  Dockerfile
en/rs/08-final-checkpoint/checker/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+159 files in other folders)
